--- a/css/media.css
+++ b/css/media.css
@@ -3,14 +3,14 @@
     section.face h1.header1
     {
 
-        padding-left: 70px;
-        font-size: 25px;
+        padding-left: 40px;
+        font-size: 18px;
 
     }
     section.face h1.header2
     {
          padding-left: 20px;
-        font-size: 23px;
+        font-size: 18px;
     }
     section.face p
     {
@@ -30,10 +30,15 @@
             display: block;
             margin-top: 60px;
             margin-bottom: 80px;
-            margin-left: 150px;
+            margin-left: 80px;
             background-color: transparent;
             color:white;
             animation: hvr-bob 1s ease-in-out infinite;
+        }
+    section.after-face button
+        {
+            padding-left: 10px;
+            width: 50%;
         }
     section.services .active
         {
@@ -48,11 +53,49 @@
         }
     section.services button
     {
-        font-size: 12px;
+        font-size: 15px;
+        padding-left: 10px;
+        width:50%;
     }
     section.about-us h1
     {
         font-size: 25px;
+        width:70%;
+    }
+    section.about-us h2
+    {
+        font-size: 20px;
+        line-height: 1.7;
+    }
+    section.about-us button
+    {
+        font-size: 15px;
+        width:50%;
+        padding-left: 10px;
+    }
+    section.projects h1 
+    {
+        padding-left: 0px;
+    }
+    section.projects div.carousel-caption
+        {
+            font-size: 10px;
+            margin-bottom: 30px;
+            margin-left: 15px;
+            line-height: 4;
+        }
+    section.our-clients h1
+    {
+        width:90%;
+    }
+    section.news h1
+    {
+        width: 80%;
+    }
+     section.contact h1
+    {
+        width:60%;
+        padding-left: 0px;
     }
 }
 @media (min-width:768px) and (max-width:991px)
@@ -78,6 +121,24 @@
     {
         font-size: 30px;
     }
+    section.projects div.carousel-caption
+        {
+            line-height: 5;
+    }
+    section.our-clients h1
+    {
+        width:40%;
+    }
+     section.news h1
+    {
+        width: 50%;
+    }
+    section.contact h1
+    {
+        width:30%;
+        padding-left: 0px;
+    }
+
 }
 @media (min-width:992px) and (max-width:1199px)
 {
@@ -98,6 +159,18 @@
        
         padding-top: 25px;
         margin-left: -120px;
+    }
+    section.our-clients h1
+    {
+        width:30%;
+    }
+    section.news h1
+    {
+        width: 37%;
+    }
+    section.contact h1
+    {
+        width:50%;
     }
 }
 @media (min-width:1200px)
