--- a/css/media.css
+++ b/css/media.css
@@ -30,7 +30,7 @@
             display: block;
             margin-top: 60px;
             margin-bottom: 80px;
-            margin-left: 80px;
+            margin-left: 70px;
             background-color: transparent;
             color:white;
             animation: hvr-bob 1s ease-in-out infinite;
@@ -97,6 +97,14 @@
         width:60%;
         padding-left: 0px;
     }
+    section.contact div.box2 div.col-md-6:first-of-type
+    {
+        padding-right: 0px;
+    }
+    .spinner
+    {
+        margin:150px auto 
+    }
 }
 @media (min-width:768px) and (max-width:991px)
 {
@@ -138,7 +146,13 @@
         width:30%;
         padding-left: 0px;
     }
-
+     section.contact div.box2 div.col-md-6:first-of-type
+    {
+        padding-right: 0px;
+    }.spinner
+    {
+        margin:250px auto 
+    }
 }
 @media (min-width:992px) and (max-width:1199px)
 {
